updating build_release script and README file

--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 The program goes onto contratos.gov.co and check whether there are new processes availables.
 
 ### INSTALATION ###
-
 # for UBUNTU #
 sudo apt-get install python
 ./auto_form
@@ -9,3 +8,14 @@ sudo apt-get install python
 # for WINDOWS #
 install python (2.6 not 3.*)
 python auto_form.py
+
+### RUNNING ###
+# Run once #
+cd /the/folder/containing/the/auto_form.py/script
+./auto_form.py
+
+# Setup cron (every morning at 5am). Linux only #
+sudo ./auto_form.py --setup-cron
+
+# Check logs #
+tail -f log/out
